pages/versions/v49.0.0/sdk/localization.mdx
---
title: Localization
description: A library that provides an interface for native user localization information.
sourceCodeUrl: 'https://github.com/nxenv/nxenv/tree/sdk-49/packages/nxenv-localization'
packageName: 'nxenv-localization'
iconUrl: '/static/images/packages/nxenv-localization.png'
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import PlatformsSection from '~/components/plugins/PlatformsSection';

`nxenv-localization` allows you to Localize your app, customizing the experience for specific regions, languages, or cultures. It also provides access to the locale data on the native device. Using a localization library such as [`lingui-js`](https://lingui.dev/introduction), [`react-intl`](https://formatjs.io/docs/getting-started/installation/) or [`i18n-js`](https://github.com/fnando/i18n-js) with `nxenv-localization` will enable you to create a very accessible experience for users.

<PlatformsSection android emulator ios simulator web />

## Installation

<APIInstallSection />

## Usage

Find more information about using `nxenv-localization` in the [Localization](/guides/localization) guide.

## API

```jsx
import { getLocales, getCalendars } from 'nxenv-localization';
```

### Behavior

You can use synchronous `getLocales()` and `getCalendars()` methods to get the locale settings of the user device. On iOS, the results will remain the same while the app is running.

On Android, the user can change locale preferences in Settings without restarting apps. To keep the localization current, you can rerun the `getLocales()` and `getCalendars()` methods every time the app returns to the foreground. Use `AppState` to detect this.

<APISection packageName="nxenv-localization" apiName="Localization" />
